[package]
name = "ember-sgm-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.31"
hashbrown = { version = "0.15.2", features = ["rayon", "serde"] }
itertools = "0.14.0"
neo4rs = "0.8.0"
num_cpus = "1.16.0"
project-root = "0.2.2"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = "0.8.3"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.44.1", features = ["full"] }
